# test_cmake_d

./: README.md  build.sh  clean.sh  exec.sh  prep.sh
Project/: CMakeLists.txt
Project/Module1/: CMakeLists.txt
Project/Module2/: CMakeLists.txt  main.d
Project/Module3/: CMakeLists.txt
Project/Module3/dep_inc/: dep.d
Project/Module4/: CMakeLists.txt  main.d
Project/Module4/dep/: CMakeLists.txt  dep.cpp  dep.h
Project/Module5/: CMakeLists.txt  main.cpp
Project/Module5/dep/: CMakeLists.txt  dep.d
